--- a/frontend/html/logs.html
+++ b/frontend/html/logs.html
@@ -15,11 +15,11 @@
     />
   </head>
   <body>
-    <header id="header">
+    <header>
       <img src="../img/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
-    <main id="main">
-      <ul id="side-bar">
+    <main>
+      <ul>
         <li id="first-sidebar">Mission</li>
         <!-- User 탭 -->
         <a href="users.html">
@@ -42,56 +42,51 @@
           </div>
         </a>
       </ul>
-      <div id="body">
-        <div id="body-bottom">
-          <div id="first-breadcrumb">Logs</div>
-          <div id="second-breadcrumb">Mission > Logs</div>
-          <br />
-          <br />
-          <br />
-          <div id="container-box">
-            <div id="inner-box">
-              <!-- 로그 수 -->
-              <div id="total-logs" class="total-logs">Total:</div>
-              <!-- 검색창 -->
-              <div id="search-container">
-                <div id="search-box">
-                  <input
-                    type="text"
-                    id="searchInput"
-                    placeholder=" 조회할 로그 ID를 입력하세요."
-                  />
-                  <div id="magnifier">
-                    <i class="fa-solid fa-search" id="search-button"></i>
-                  </div>
+      <section>
+        <div id="first-breadcrumb">Logs</div>
+        <div id="second-breadcrumb">Mission > Logs</div>
+
+        <div id="container-box">
+          <div id="inner-box">
+            <!-- 로그 수 -->
+            <div id="total-logs" class="total-logs">Total:</div>
+            <!-- 검색창 -->
+            <div id="search-container">
+              <div id="search-box">
+                <input
+                  type="text"
+                  id="searchInput"
+                  placeholder=" 조회할 로그 ID를 입력하세요."
+                />
+                <div id="magnifier">
+                  <i class="fa-solid fa-search" id="search-button"></i>
                 </div>
               </div>
-              <br />
-              <!-- 테이블 -->
-              <table id="my-table">
-                <colgroup>
-                  <col class="col1" />
-                  <col class="col2" />
-                  <col class="col3" />
-                  <col class="col4" />
-                </colgroup>
-                <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Date</th>
-                    <th>User IP</th>
-                    <th>User Agent</th>
-                  </tr>
-                </thead>
-                <tbody id="log-table-body">
-                  <!-- 로그 목록이 들어가는 부분 -->
-                </tbody>
-              </table>
-              <br />
-              <br />
-              <!-- 좌측하단 여핵 -->
-              <div id="left-area"></div>
-              <!-- 페이지네이션 -->
+            </div>
+            <br />
+            <!-- 테이블 -->
+            <table id="my-table">
+              <colgroup>
+                <col class="col1" />
+                <col class="col2" />
+                <col class="col3" />
+                <col class="col4" />
+              </colgroup>
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Date</th>
+                  <th>User IP</th>
+                  <th>User Agent</th>
+                </tr>
+              </thead>
+              <tbody id="log-table-body">
+                <!-- 로그 목록이 들어가는 부분 -->
+              </tbody>
+            </table>
+
+            <!-- 페이지네이션 -->
+            <div id="bottom-controls">
               <div class="pagination" id="pagination">
                 <i class="fa-solid fa-angles-left"></i>
                 <i class="fa-solid fa-angle-left"></i>
@@ -99,15 +94,13 @@
                 <i class="fa-solid fa-angle-right"></i>
                 <i class="fa-solid fa-angles-right"></i>
               </div>
-              <!-- 우측하단 여백 -->
-              <div id="right-area"></div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
-    <footer id="footer">
-      Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.
+    <footer>
+      <p>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../js/logs.js"></script>
