--- a/frontend/static/assets/html/users.html
+++ b/frontend/static/assets/html/users.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KO-MAPPER</title>
-    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="../css/users.css" />
     <link
       rel="stylesheet"
@@ -23,31 +23,32 @@
       <ul>
         <li id="first-sidebar">Mission</li>
         <!-- User 탭 -->
-        <a href="users.html">
-          <div id="second-sidebar">
+        <li id="second-sidebar">
+          <a href="users.html">
             <i class="fa-solid fa-users" style="flex: 2; text-align: right"></i>
             <span style="flex: 3; text-align: left; font-size: 20px"
               >Users</span
             >
-          </div>
-        </a>
+          </a>
+        </li>
 
         <!-- Logs 탭 -->
-        <a href="logs.html">
-          <div id="third-sidebar">
+        <li id="third-sidebar">
+          <a href="logs.html">
             <i
               class="fa-solid fa-door-open"
               style="flex: 2; text-align: right"
             ></i>
             <span style="flex: 3; text-align: left; font-size: 20px">Logs</span>
-          </div>
-        </a>
+          </a>
+        </li>
       </ul>
       <section>
         <div id="first-breadcrumb">Users</div>
         <div id="second-breadcrumb">Mission > Users</div>
 
-        <div id="container-box">
+        <!-- 컨테이너 박스 -->
+        <article id="container-box">
           <div id="inner-box">
             <!-- 회원 수 -->
             <div id="total-users" class="total-users">Total:</div>
@@ -109,7 +110,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </article>
       </section>
     </main>
     <footer>
