--- a/hm.html
+++ b/hm.html
@@ -39,21 +39,20 @@
         </ul>
       </nav>
       <section>
-        <!-- 주석의 기준 : 한글주석 사이 단위로 주석처리함 -->
         <!-- 경로 -->
-        <!-- <div class="breadcrumb">
+        <div class="breadcrumb">
           <div id="first-breadcrumb">Users</div>
           <div id="second-breadcrumb">Mission > Users</div>
         </div>
-        <hr /> -->
+        <hr />
         <!-- 컨테이너박스 -->
-        <!-- <article>
+        <article>
           <div id="inner-box">
-            <div class="search-nav"> -->
-        <!-- 회원 수 -->
-        <!-- <div id="total-users" class="total-users">Total:</div> -->
-        <!-- 검색창 -->
-        <!-- <div id="search-container">
+            <div class="search-nav">
+              <!-- 회원 수 -->
+              <div id="total-users" class="total-users">Total:</div>
+              <!-- 검색창 -->
+              <div id="search-container">
                 <div id="search-box">
                   <input
                     type="text"
@@ -66,9 +65,9 @@
                 </div>
               </div>
             </div>
-            <br /> -->
-        <!-- 테이블 -->
-        <!-- <table id="my-table">
+            <br />
+            <!-- 테이블 -->
+            <table id="my-table">
               <colgroup>
                 <col class="col1" />
                 <col class="col2" />
@@ -87,31 +86,31 @@
                   <th>Organization</th>
                 </tr>
               </thead>
-              <tbody id="user-table-body"> -->
-        <!-- 유저 목록이 들어가는 부분 -->
-        <!-- </tbody>
-            </table> -->
+              <tbody id="user-table-body">
+                <!-- 유저 목록이 들어가는 부분 -->
+              </tbody>
+            </table>
 
-        <!-- 삭제 -->
-        <!-- <div id="bottom-controls">
+            <!-- 삭제 -->
+            <div id="bottom-controls">
               <div id="delete-area">
                 <button id="delete-button">Delete</button>
-              </div> -->
-        <!-- 페이지네이션 -->
-        <!-- <div class="pagination" id="pagination">
+              </div>
+              <!-- 페이지네이션 -->
+              <div class="pagination" id="pagination">
                 <i class="fa-solid fa-angles-left"></i>
                 <i class="fa-solid fa-angle-left"></i>
                 <ol id="numbers"></ol>
                 <i class="fa-solid fa-angle-right"></i>
                 <i class="fa-solid fa-angles-right"></i>
-              </div> -->
-        <!-- 신규 회원생성 -->
-        <!-- <div id="register-area">
+              </div>
+              <!-- 신규 회원생성 -->
+              <div id="register-area">
                 <button id="register-button">Register</button>
               </div>
             </div>
           </div>
-        </article> -->
+        </article>
       </section>
     </main>
     <!-- 푸터 -->
