--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,10 +16,12 @@
     />
   </head>
   <body>
+    <!-- 헤더 -->
     <header>
       <img src="./static/img/kmplogo_fit.png" alt="Logo" class="logo" />
     </header>
     <main>
+      <!-- 사이드바 -->
       <nav>
         <ul>
           <li id="first-sidebar">Mission</li>
@@ -37,8 +39,10 @@
           >
         </ul>
       </nav>
+      <!-- 내용 -->
       <section></section>
     </main>
+    <!-- 푸터 -->
     <footer>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</footer>
     <div id="app"></div>
     <script type="module" src="./static/js/index.js"></script>
