--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
 
     <title>Mission</title>
     <link rel="stylesheet" href="./static/css/reset.css" />
+    <link rel="stylesheet" href="./static/css/index.css" />
+    <link rel="stylesheet" href="./static/css/logs.css" />
     <link rel="stylesheet" href="./static/css/users.css" />
     <link
       rel="stylesheet"
@@ -39,12 +41,25 @@
           >
         </ul>
       </nav>
-      <!-- 내용 -->
-      <section></section>
+      <!-- 내용을 동적으로 불러오는 부분 -->
+      <section id="content"></section>
     </main>
     <!-- 푸터 -->
     <footer>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</footer>
-    <div id="app"></div>
-    <script type="module" src="./static/js/index.js"></script>
+
+    <!-- <div id="app"></div> -->
+    <script type="module" src="./static/js/index.js" defer></script>
+    <script
+      type="module"
+      src="./static/js/javascript/sidebar.js"
+      defer
+    ></script>
+    <script type="module" src="./static/js/javascript/logs.js" defer></script>
+    <script type="module" src="./static/js/javascript/user.js" defer></script>
+    <script
+      type="module"
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      defer
+    ></script>
   </body>
 </html>
