--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,8 +41,15 @@
           >
         </ul>
       </nav>
-      <!-- 내용을 동적으로 불러오는 부분 -->
-      <section id="content"></section>
+      <section>
+        <div class="breadcrumb">
+          <div class="first-breadcrumb"></div>
+          <div class="second-breadcrumb"></div>
+        </div>
+        <hr />
+        <!-- 컨테이너 박스 = 내용을 동적으로 불러오는 부분 -->
+        <div id="container-box"></div>
+      </section>
     </main>
     <!-- 푸터 -->
     <footer>Copyright ⓒ 2024 ㈜KO-MAPPER Co.,Ltd rights reserved.</footer>
